<resources>
    <string name="app_name">My Calculator</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="allClear">AC</string>
    <string name="delete">C</string>
    <string name="percentage">%</string>
    <string name="divide">/</string>
    <string name="multiply">x</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="point">.</string>
    <string name="brackets">()</string>
    <string name="equals">=</string>
</resources>